--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ nom = "7.1"
 thiserror = "1.0"
 anyhow = "1.0"
 clap = { version = "4.0", features = ["cargo"] }
+once_cell = "1.17"
 
 [profile.release]
 opt-level = 3
