switch from clap to xflags
Our arg parsing needs are very simple, and this knocks ~300 KiB off of
the binary.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,14 @@ fxhash = "0.2"
 nom = "7.1"
 thiserror = "1.0"
 anyhow = "1.0"
-clap = { version = "4.0", features = ["cargo"] }
+xflags = "0.3"
 once_cell = "1.17"
 
 [profile.release]
 opt-level = 3
 codegen-units = 1
-lto = "thin"
+panic = "abort"
+lto = true
 strip = true
 
 [[bin]]
