--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 fxhash = "0.2"
 nom = "7.1"
-thiserror = "1.0"
+quick-error = "2.0"
 anyhow = "1.0"
 xflags = "0.3"
 once_cell = "1.17"
