--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
-name = "blueprint-scm"
+name = "blueprint-scheme"
 version = "0.0.1"
 edition = "2021"
 
 [dependencies]
 fxhash = "0.2"
 nom = "7.1"
-num = "0.4"
+num = { version = "0.4", default-features = false, features = ["std"] }
 quick-error = "2.0"
-anyhow = "1.0"
 xflags = "0.3"
 once_cell = "1.17"
 
@@ -18,6 +17,7 @@ codegen-units = 1
 panic = "abort"
 lto = true
 strip = true
+# debug = true
 
 [[bin]]
 name = "blueprint"
