--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ quick-error = "2.0"
 xflags = "0.3"
 once_cell = "1.17"
 
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+jemallocator = "0.5"
+
 [profile.release]
 opt-level = 3
 codegen-units = 1
