--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,54 +15,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: extractions/setup-just@v1
         with:
-          toolchain: stable
-          profile: minimal
-          override: true
-      - name: Run cargo check
-        uses: actions-rs/cargo@v1
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: Swatinem/rust-cache@v2
         with:
-          command: check
+          cache-on-failure: true
+      - name: Run checks
+        run: just check
 
   Test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: extractions/setup-just@v1
         with:
-          toolchain: stable
-          profile: minimal
-          override: true
-      - name: Run tests
-        uses: actions-rs/cargo@v1
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: Swatinem/rust-cache@v2
         with:
-          command: test
-
-  Lint:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          profile: minimal
-          override: true
-      - name: Check formatting
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --check
-      - name: Run lints
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
+          cache-on-failure: true
+      - name: Run checks
+        run: just test
